# NRGmin

./: .gitignore  CMakeLists.txt  Makefile  README.md  minimize  minimize.c  minimize_list  minimize_list.c
cmake/: FindCheck.cmake  FindGSL.cmake
examples/energy_setup/: README.md  noe.json  noe.txt  pairsprings.txt  pointsprings.txt  setup_all.json
examples/example1/: pairsprings.txt  run.sh
examples/example1/output_example/: rec-lig-min.json  rec-lig-score.json  rec-min.json  rec2-lig2-density.json  rec2-lig2-min.json  rec2-lig2-pairspr.json  rec2-lig2-pointspr-density.json  rec2-lig2-pointspr.json  rec2-min.json
examples/usage/: BACE_4_lig.json  README.md  setup.json
src/: energy.c  energy.h  minimize.c  parse_options.c  parse_options.c.in  parse_options.h  potentials.c  potentials.h  setup.c  setup.h  usage.txt  utils.c  utils.h
test/: CMakeLists.txt  template.psf  test1.c  test_all.c
test/data/: 30355w1_Biharmonic.json  30355w1_Soft.json  30355w1_Square.json  355w1.json  355w1.txt  density.json  pairsprings.txt  pairsprings_invalid.txt  pointsprings.txt  setup_all.json  setup_all_no_noe.json  setup_density.json  setup_density_invalid.json  setup_fixed_flag.json  setup_fixed_json.json  setup_global.json  setup_global_unknown_args.json  setup_noe.json  setup_noe_invalid.json  setup_pairsprings.json  setup_pairsprings_invalid.json  setup_pointsprings.json  setup_pointsprings_invalid.json
test/prms/: par_all22_prot_modified.prm  top_all22_prot_modified.rtf
